# lunade

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
lunawm/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac
lunawm/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.3  traces.4
lunawm/src/: Makefile  Makefile.am  Makefile.in  client.c  client.c~  client.h  events.c  events.h  frame.c  frame.h  lunawm  main.c  wmanager.c  wmanager.h
lunawm/src/.deps/: events.Po  main.Po  wmanager.Po
